Overflow of Main Component Prevented

--- a/tensorboard/webapp/plugins/npmi/views/main/main_component.scss
+++ b/tensorboard/webapp/plugins/npmi/views/main/main_component.scss
@@ -18,6 +18,7 @@ limitations under the License.
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow: hidden;
 }
 
 .content {
